fix mkdocs bug 1

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,6 @@ python:
    install:
    - requirements: docs/requirements.txt
 
-sphinx:
-  builder: "mkdocs"
+mkdocs:
+  configuration: mkdocs.yml
         
