--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Start server
       run: |
         source venv/bin/activate
-        python3 -c "from pyweber.utils.router import Router; from pyweber.utils.server import Server; server = Server(Router()); server.run()" &
-        sleep 2
+        python3 -c "from pyweber.utils.router import Router; from pyweber.utils.server import Server; router = Router(); router.add_route('/', Template('index_template.html')); server = Server(router); server.run()" &
+        sleep 5  # Dê tempo suficiente para o servidor iniciar
 
     - name: Wait for server to be ready
       run: |
@@ -48,6 +48,7 @@ jobs:
         done
         echo "❌ O servidor não iniciou corretamente!"
         exit 1
+
 
     - name: Run tests
       run: |
