--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
         pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest
+        pip install pytest-cov
         pip install coveralls
         pip install .
 
